changes for swagger
